tests/character_class_out_of_order_diag/expected_err.txt
grammar.peg:1:10: error: Character range is out of order.
 1 | Root <- [z-a]
   |          ~~~
